--- a/index.html
+++ b/index.html
@@ -29,15 +29,69 @@
 			<div class="hero-text-box">
 				<h1 class="hero-text">Home Care Agency of Choice</h1>
 				<h4 class="hero-text2">Provide quality home care services throughout metropolitan Chicago</h4>
+				<button type="button" class="btn">Contact Us</button>
 			</div>
-		</header>	
+
+		</header>
+
+		<section class="blurb-section container text-center">
+			<h1>ASI Home Health Care Customized For You</h1>
+			<h4>ASI is a full post-acute care continuum system. Creates improved health care coordination and monitoring of patients outside of the hospital and within the community. It improves patient compliance, therapy management, and fall prevention.</h4>
+		</section>	
+		
+
+
+
+
+		<section class="process-section container">
+			<div class="row">
+				<div class="page-header text-center"><h1>Lorem ipsum dolor sit amet</h1></div>
+				<div class="col-md-4">
+					<img src="styles/images/nurse_icon.png" width="15%" height="auto">
+					<h1>Lorem Ipsum</h1>
+					<ul>
+						<li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
+						<li>Nam sollicitudin velit quam, vel gravida enim blandit sed.</li> 
+						<li>Mauris ac odio mollis, tincidunt tellus eget, gravida odio.</li> 
+						<li>Fusce iaculis urna at ligula pellentesque viverra.</li>
+					</ul>
+					
+				</div>
+				<div class="col-md-4">
+					<img src="styles/images/doctor.png" width="15%" height="auto">
+					<h1>Lorem Ipsum</h1>
+					<ul>
+						<li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
+						<li>Nam sollicitudin velit quam, vel gravida enim blandit sed.</li> 
+						<li>Mauris ac odio mollis, tincidunt tellus eget, gravida odio.</li> 
+						<li>Fusce iaculis urna at ligula pellentesque viverra.</li>
+					</ul>
+				</div>
+				<div class="col-md-4">
+					<img src="styles/images/stet.png" width="15%" height="auto">
+					<h1>Lorem Ipsum</h1>
+					<ul>
+						<li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
+						<li>Nam sollicitudin velit quam, vel gravida enim blandit sed.</li> 
+						<li>Mauris ac odio mollis, tincidunt tellus eget, gravida odio.</li> 
+						<li>Fusce iaculis urna at ligula pellentesque viverra.</li>
+					</ul>
+				</div>
+			</div>
+			
+		</section>
+
+
+
+
+		<section class="blurb-section container text-center"><h1>What makes us different?</h1>
+		<h4>We treat dual eligible patients. Our services include a transportation system for patients who need a ride to the doctor and home medical equipment. ASI is an all-inclusive agency providing multilingual competent services.</h4>
+		</section>	
 
 
 
 
 
-
-		</nav>
 
 
 
