--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-		<link rel="stylesheet" href="styles/main.css">
+		
 		<link rel="stylesheet" href="styles/animate.css">
+		<link rel="stylesheet" href="styles/ionicons.min.css">
+		<link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+		<link rel="stylesheet" href="styles/main.css">
+
 		<link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	</head>
@@ -27,6 +31,7 @@
 					<li class="process-section"><a href="#process-section">How It Works</a></li>
 					<li class="gears-section"><a href="#gears-section">Info Center</a></li>
 					<li class="careers-section"><a href="#careers-section">Careers</a></li>
+					<!-- <li class="testimony-section"><a href="#testimony-section">About ASI</a></li> -->
 					<li class="testimony-section"><a href="#testimony-section">About ASI</a></li>
 					<li class="form-section"><a href="#form-section">Contact Us</a></li>
 				</ul>
@@ -59,54 +64,54 @@
 				<div class="col-md-4">
 					<h4><img src="styles/images/nurse_icon.png" class="icon" width="15%" height="auto">Lorem Ipsum</h4>
 					<ul class="bullet-copy">
-						<li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-						<li>Nam sollicitudin velit quam, vel gravida enim blandit sed.</li> 
-						<li>Mauris ac odio mollis, tincidunt tellus eget, gravida odio.</li> 
+						<li>Lorem ipsum dolor sit amet, consectetur adipiscing.</li>
+						<li>Nam sollicitudin velit quam, vel gravida enim blandit.</li> 
+						<li>Mauris ac odio mollis, tincidunt tellus eget, gravida.</li> 
 						<li>Fusce iaculis urna at ligula pellentesque viverra.</li>
 					</ul>
 				</div>
 				<div class="col-md-4">
 					<h4><img src="styles/images/doctor.png" class="icon" width="15%" height="auto">Lorem Ipsum</h4>
 					<ul>
-						<li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-						<li>Nam sollicitudin velit quam, vel gravida enim blandit sed.</li> 
-						<li>Mauris ac odio mollis, tincidunt tellus eget, gravida odio.</li> 
+						<li>Lorem ipsum dolor sit amet, consectetur adipiscing.</li>
+						<li>Nam sollicitudin velit quam, vel gravida enim blandit.</li> 
+						<li>Mauris ac odio mollis, tincidunt tellus eget, gravida.</li> 
 						<li>Fusce iaculis urna at ligula pellentesque viverra.</li>
 					</ul>
 				</div>
 				<div class="col-md-4">
 					<h4><img src="styles/images/stet.png" class="icon" width="15%" height="auto">Lorem Ipsum</h4>
 					<ul>
-						<li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-						<li>Nam sollicitudin velit quam, vel gravida enim blandit sed.</li> 
-						<li>Mauris ac odio mollis, tincidunt tellus eget, gravida odio.</li> 
+						<li>Lorem ipsum dolor sit amet, consectetur adipiscing.</li>
+						<li>Nam sollicitudin velit quam, vel gravida enim blandit.</li> 
+						<li>Mauris ac odio mollis, tincidunt tellus eget, gravida.</li> 
 						<li>Fusce iaculis urna at ligula pellentesque viverra.</li>
 					</ul>
 				</div>
 				<div class="col-md-4">
 					<h4><img src="styles/images/heart_magnifier.png" class="icon"  width="15%" height="auto">Lorem Ipsum</h4>
 					<ul>
-						<li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-						<li>Nam sollicitudin velit quam, vel gravida enim blandit sed.</li> 
-						<li>Mauris ac odio mollis, tincidunt tellus eget, gravida odio.</li> 
+						<li>Lorem ipsum dolor sit amet, consectetur adipiscing.</li>
+						<li>Nam sollicitudin velit quam, vel gravida enim blandit.</li> 
+						<li>Mauris ac odio mollis, tincidunt tellus eget, gravida.</li> 
 						<li>Fusce iaculis urna at ligula pellentesque viverra.</li>
 					</ul>
 				</div>
 				<div class="col-md-4">
 					<h4><img src="styles/images/ambulance.png" class="icon" width="15%" height="auto">Lorem Ipsum</h4>
 					<ul>
-						<li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-						<li>Nam sollicitudin velit quam, vel gravida enim blandit sed.</li> 
-						<li>Mauris ac odio mollis, tincidunt tellus eget, gravida odio.</li> 
+						<li>Lorem ipsum dolor sit amet, consectetur adipiscing.</li>
+						<li>Nam sollicitudin velit quam, vel gravida enim blandit.</li> 
+						<li>Mauris ac odio mollis, tincidunt tellus eget, gravida.</li> 
 						<li>Fusce iaculis urna at ligula pellentesque viverra.</li>
 					</ul>
 				</div>
 				<div class="col-md-4">
 					<h4><img src="styles/images/stet.png"  width="15%" class="icon" height="auto">Lorem Ipsum</h4>
 					<ul>
-						<li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-						<li>Nam sollicitudin velit quam, vel gravida enim blandit sed.</li> 
-						<li>Mauris ac odio mollis, tincidunt tellus eget, gravida odio.</li> 
+						<li>Lorem ipsum dolor sit amet, consectetur adipiscing.</li>
+						<li>Nam sollicitudin velit quam, vel gravida enim blandit.</li> 
+						<li>Mauris ac odio mollis, tincidunt tellus eget, gravida.</li> 
 						<li>Fusce iaculis urna at ligula pellentesque viverra.</li>
 					</ul>
 				</div>
@@ -120,10 +125,10 @@
 
 
 
-		<section class="blurb-section js--blurb-section container">
+<!-- 		<section class="blurb-section js--blurb-section container">
 			<div class="page-header text-center"><h1>ASI Home Health Care Customized For You</h1></div>
 			<h4>ASI is a full post-acute care continuum system. Creates improved health care coordination and monitoring of patients outside of the hospital and within the community. It improves patient compliance, therapy management, and fall prevention.</h4>
-		</section>	
+		</section>	 -->
 
 		
 
@@ -143,7 +148,7 @@
 
 		<section class="gears-section js--gears-section container" id="gears-section">
 			<div class="row">
-				<div class="page-header text-center"><h1>Lorem ipsum dolor sit amet</h1></div>
+				<div class="page-header text-center"><h1>Information Center</h1></div>
 				<div class="col-md-4">
 					<h4>All Care In One Place</h4>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sollicitudin velit quam, vel gravida enim blandit sed. Mauris ac odio mollis, tincidunt tellus eget, gravida odio. Fusce iaculis urna at ligula pellentesque viverra.
@@ -159,7 +164,9 @@
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sollicitudin velit quam, vel gravida enim blandit sed. Mauris ac odio mollis, tincidunt tellus eget, gravida odio. Fusce iaculis urna at ligula pellentesque viverra.
 					</p>
 				</div>
-				<img src="styles/images/gears.png">
+				<div class="col-md-12 text-center">
+					<img src="styles/images/gears.png">
+				</div>	
 			</div>				
 		</section>
 
@@ -170,12 +177,14 @@
 
 		<section class="careers-section js--careers-section container" id="careers-section">
 			<div class="row">
-				<div class="page-header text-center"><h1>Careers at ASI</h1></div>	
-				<div class="col-md-6">
-	  				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
+				<div class="page-header text-center"><h1>Careers at ASI</h1></div>
+				<div class="js--wp-1">	
+					<div class="col-md-6">
+		  				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
+					</div>
+					<div class="col-md-6">
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
 				</div>
-				<div class="col-md-6">
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
 				</div>
 			</div>
 		</section>
@@ -190,10 +199,10 @@
 
 		
 
-		<section class="blurb-section js--blurb-section container">
+<!-- 		<section class="blurb-section js--blurb-section container">
 			<div class="page-header text-center"><h1>ASI Home Health Care Customized For You</h1></div>
 			<h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sollicitudin velit quam, vel gravida enim blandit sed. Mauris ac odio mollis, tincidunt tellus eget, gravida odio. Fusce iaculis urna at ligula pellentesque viverra</h4>
-		</section>
+		</section> -->
 
 
 
@@ -219,12 +228,12 @@
 				<div class="col-md-6">
 					<blockquote>
 	  				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-					<cite><img src="styles/images/customer-1.jpg">Customer 1</cite></blockquote>
+					<cite><img src="styles/images/customer-1.jpg">Customer 3</cite></blockquote>
 				</div>
 				<div class="col-md-6">
 					<blockquote>
 	  				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-					<cite><img src="styles/images/customer-2.jpg">Customer 2</cite></blockquote>
+					<cite><img src="styles/images/customer-2.jpg">Customer 4</cite></blockquote>
 				</div>
 			</div>
 		</section>
@@ -232,12 +241,6 @@
 
 
 
-
-
-		<section class="blurb-section js--blurb-section container text-center" id="blurb-section">
-			<div class="page-header text-center"><h1>What makes us different?</h1></div>
-			<h4>We treat dual eligible patients. Our services include a transportation system for patients who need a ride to the doctor and home medical equipment. ASI is an all-inclusive agency providing multilingual competent services.</h4>
-		</section>		
 
 
 
@@ -286,7 +289,7 @@
 						</div>	
 						<div class="form-group">
 						    <div class="col-sm-offset-2 col-sm-10">
-						      <button type="submit" class="btn btn-default">Send</button>
+						      <button type="submit" class="btn">Send</button>
 						    </div>
 						</div>
 					</form>
@@ -299,17 +302,32 @@
 
 
 
-		<footer class="container">
-			<p>
-				WHAT TO EXPECT working with ASI
- 				<p></p>
-				At ASI we take a highly personalized approach to care for each of our clients.  In order to generate personalized care plans, we begin each new relationship with a free phone consultation and a subsequent in-home assessment.
- 				<p></p>
-				The initial in-home assessment focuses on determining the safety risks and challenges facing a client.  Additionally, it's an opportunity for clients to ask questions and make specific requests relative to their care plan.
- 				<p></p>
-​				Personalized Care Plans are then presented by ASI and agreed upon by all parties before 				'Matching.' Matching a client to a caregiver is based on personalities, personal 						preferences (likes and dislikes), primary language, skill requirements, certifications, 				etc.
-			</p>
-		</footer>
+		<footer>
+		<div class="row">
+			<div class="col-md-6">
+				<ul class="footer-nav">
+					<li><a href="#">How It Works</a></li>
+					<li><a href="#">Info Center</a></li>
+					<li><a href="#">Careers</a></li>
+					<li><a href="#">About ASI</a></li>
+					<li><a href="#">Contact Us</a></li>
+				</ul>
+			</div>
+
+			<div class="col-md-6">
+				<ul class="social-links">
+					<li><a href="#"><i class="ion-social-facebook"></i></a></li>
+					<li><a href="#"><i class="ion-social-twitter"></i></a></li>
+					<!-- <li><a href="#"><i class="ion-social-googleplus"></i></a></li> -->
+					<!-- <li><a href="#"><i class="ion-social-instagram"></i></a></li> -->
+				</ul>
+			</div>
+		</div>
+
+		<div class="row">
+			<p>Copyright &copy; 2017 by ASI Services. All rights reserved.</p>
+		</div>
+	</footer>
 
 
 
