asi final draft

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 
 
-		<header class="header-section container">	
+		<header class="header-section container-fluid">	
 			<nav class="nav navbar-nav navbar-right navbar-fixed-top">
 				<img src="styles/images/asi-logo.png" alt="asi logo" class="logo">
 				<img src="styles/images/asi-logo-small.png" alt="asi logo" class="logo-small">
@@ -31,9 +31,9 @@
 					<li class="process-section"><a href="#process-section">How It Works</a></li>
 					<li class="gears-section"><a href="#gears-section">Info Center</a></li>
 					<li class="careers-section"><a href="#careers-section">Careers</a></li>
-					<!-- <li class="testimony-section"><a href="#testimony-section">About ASI</a></li> -->
 					<li class="testimony-section"><a href="#testimony-section">About ASI</a></li>
 					<li class="form-section"><a href="#form-section">Contact Us</a></li>
+					<li><a href="#">Spanish Version</a></li>
 				</ul>
 			</nav>
 			<div class="hero-text-box text-center">
@@ -48,21 +48,11 @@
 
 
 
-
-
-
-
-			
-		
-
-
-
-
-		<section class="process-section js--process-section container" id="process-section">
+		<section class="process-section process-section-box js--process-section container-fluid" id="process-section">
 			<div class="row">
 				<div class="page-header text-center"><h1>How It Works</h1></div>
 				<div class="col-md-4">
-					<h4><img src="styles/images/nurse_icon.png" class="icon" width="15%" height="auto">Lorem Ipsum</h4>
+					<h4><img src="styles/images/nurse_icon.png" class="icon" width="15%" height="auto">HEADING TITLE</h4>
 					<ul class="bullet-copy">
 						<li>Lorem ipsum dolor sit amet, consectetur adipiscing.</li>
 						<li>Nam sollicitudin velit quam, vel gravida enim blandit.</li> 
@@ -71,7 +61,7 @@
 					</ul>
 				</div>
 				<div class="col-md-4">
-					<h4><img src="styles/images/doctor.png" class="icon" width="15%" height="auto">Lorem Ipsum</h4>
+					<h4><img src="styles/images/doctor.png" class="icon" width="15%" height="auto">HEADING TITLE</h4>
 					<ul>
 						<li>Lorem ipsum dolor sit amet, consectetur adipiscing.</li>
 						<li>Nam sollicitudin velit quam, vel gravida enim blandit.</li> 
@@ -80,7 +70,7 @@
 					</ul>
 				</div>
 				<div class="col-md-4">
-					<h4><img src="styles/images/stet.png" class="icon" width="15%" height="auto">Lorem Ipsum</h4>
+					<h4><img src="styles/images/stet.png" class="icon" width="15%" height="auto">HEADING TITLE</h4>
 					<ul>
 						<li>Lorem ipsum dolor sit amet, consectetur adipiscing.</li>
 						<li>Nam sollicitudin velit quam, vel gravida enim blandit.</li> 
@@ -89,7 +79,7 @@
 					</ul>
 				</div>
 				<div class="col-md-4">
-					<h4><img src="styles/images/heart_magnifier.png" class="icon"  width="15%" height="auto">Lorem Ipsum</h4>
+					<h4><img src="styles/images/heart_magnifier.png" class="icon"  width="15%" height="auto">HEADING TITLE</h4>
 					<ul>
 						<li>Lorem ipsum dolor sit amet, consectetur adipiscing.</li>
 						<li>Nam sollicitudin velit quam, vel gravida enim blandit.</li> 
@@ -98,7 +88,7 @@
 					</ul>
 				</div>
 				<div class="col-md-4">
-					<h4><img src="styles/images/ambulance.png" class="icon" width="15%" height="auto">Lorem Ipsum</h4>
+					<h4><img src="styles/images/ambulance.png" class="icon" width="15%" height="auto">HEADING TITLE</h4>
 					<ul>
 						<li>Lorem ipsum dolor sit amet, consectetur adipiscing.</li>
 						<li>Nam sollicitudin velit quam, vel gravida enim blandit.</li> 
@@ -107,7 +97,7 @@
 					</ul>
 				</div>
 				<div class="col-md-4">
-					<h4><img src="styles/images/stet.png"  width="15%" class="icon" height="auto">Lorem Ipsum</h4>
+					<h4><img src="styles/images/stet.png"  width="15%" class="icon" height="auto">HEADING TITLE</h4>
 					<ul>
 						<li>Lorem ipsum dolor sit amet, consectetur adipiscing.</li>
 						<li>Nam sollicitudin velit quam, vel gravida enim blandit.</li> 
@@ -125,10 +115,10 @@
 
 
 
-<!-- 		<section class="blurb-section js--blurb-section container">
+		<section class="blurb-section js--blurb-section container-fluid">
 			<div class="page-header text-center"><h1>ASI Home Health Care Customized For You</h1></div>
 			<h4>ASI is a full post-acute care continuum system. Creates improved health care coordination and monitoring of patients outside of the hospital and within the community. It improves patient compliance, therapy management, and fall prevention.</h4>
-		</section>	 -->
+		</section>	
 
 		
 
@@ -146,23 +136,35 @@
 
 
 
-		<section class="gears-section js--gears-section container" id="gears-section">
+		<section class="gears-section js--gears-section container-fluid" id="gears-section">
 			<div class="row">
 				<div class="page-header text-center"><h1>Information Center</h1></div>
 				<div class="col-md-4">
-					<h4>All Care In One Place</h4>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sollicitudin velit quam, vel gravida enim blandit sed. Mauris ac odio mollis, tincidunt tellus eget, gravida odio. Fusce iaculis urna at ligula pellentesque viverra.
-					</p>
+					<h4>ALL CARE IN ONE PLACE</h4>
+					<ul>
+						<li>Certified Nurses Available for Home Visits</li>
+						<li>Trained Caregivers</li>
+					</ul>
 				</div>
 				<div class="col-md-4">
 					<h4>COORDINATED CARE MONITORING</h4>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sollicitudin velit quam, vel gravida enim blandit sed. Mauris ac odio mollis, tincidunt tellus eget, gravida odio. Fusce iaculis urna at ligula pellentesque viverra.
-					</p>
+					<ul>
+						<li>Prevent Illness</li>
+						<li>Shorten Hospital Stay</li>
+						<li>Stay-in Place</li>
+					</ul>
 				</div>
 				<div class="col-md-4">
 					<h4>CONCIERGE</h4>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sollicitudin velit quam, vel gravida enim blandit sed. Mauris ac odio mollis, tincidunt tellus eget, gravida odio. Fusce iaculis urna at ligula pellentesque viverra.
-					</p>
+					<ul>
+						<li>Healthcare Scheduling</li>
+						<li>Home Medical Equipment</li>
+						<li>Home Modification</li>
+						<li>Transportation</li>
+						<li>Heavy Duty Cleaning</li>
+						<li>Home Meals or Delivered</li>
+						<li>Home Chores</li>
+					</ul>
 				</div>
 				<div class="col-md-12 text-center">
 					<img src="styles/images/gears.png">
@@ -172,19 +174,35 @@
 
 
 
+		
+		<section class="blurb-section js--blurb-section container-fluid">
+			<div class="page-header text-center"><h1>What Makes Us Different?</h1></div>
+			<h4>We treat dual eligible patients. Our services include a transportation system for patients who need a ride to the doctor and home medical equipment. ASI is an all-inclusive agency providing multilingual competent services.</h4>
+		</section>		
 
 
 
-		<section class="careers-section js--careers-section container" id="careers-section">
+
+
+
+
+
+
+		<section class="careers-section careers-section-box js--careers-section container-fluid" id="careers-section">
 			<div class="row">
 				<div class="page-header text-center"><h1>Careers at ASI</h1></div>
 				<div class="js--wp-1">	
 					<div class="col-md-6">
-		  				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
+		  				<p>After 38 years of providing leading, multi-cultural home care services in the Chicagoland area, we know without a doubt that what makes ASI successful is all about our caregivers.  ASI cares for its caregivers with passion. In turn they pass on this caring and compassionate spirit to our clients. They are the very foundation of our ongoing success and what sets us apart from any other home care agency.<p>
+						<p>ASI is one of the few agencies that offers health and disability insurance benefits to their employees; as well as occupational health via Norwegian American Hospital Corporate Health Program. As such, we retain our caregivers longer than most agencies.  Many of our caregivers have been with us 10 years or more and 94% of ASI clients give the agency an overall rating of Very Good or Excellent.</p>
 					</div>
 					<div class="col-md-6">
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-				</div>
+						<p>As a home care agency of choice, we are always on the lookout for compassionate, honest and intuitive caregivers to join our family of service providers.  In many cases, people seeking employment at ASI are already passionate about providing service to others and may have been in a caregiving role in their personal lives.</p>
+						<p>Professional caregiving allows candidates to develop their innate caregiving skills into a fulfilling and rewarding career of helping others reach and maintain independent, dignified lives.  Click below to find out more about our award winning training program and how you can get started on a rewarding career in home care.</p>
+					</div>
+					<div class="col-md-12">
+						<p><strong>As always, ASI is an Equal Opportunity Employer.  We consider applicants for all positions without regard to race, color, religion, creed, gender, national origin, age, disability, marital or veteran status, or any other legally protected status.</strong></p>
+					</div>
 				</div>
 			</div>
 		</section>
@@ -199,10 +217,6 @@
 
 		
 
-<!-- 		<section class="blurb-section js--blurb-section container">
-			<div class="page-header text-center"><h1>ASI Home Health Care Customized For You</h1></div>
-			<h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sollicitudin velit quam, vel gravida enim blandit sed. Mauris ac odio mollis, tincidunt tellus eget, gravida odio. Fusce iaculis urna at ligula pellentesque viverra</h4>
-		</section> -->
 
 
 
@@ -211,7 +225,8 @@
 
 
 
-		<section class="testimony-section js--testimony-section container" id="testimony-section">
+
+		<section class="testimony-section js--testimony-section container-fluid" id="testimony-section">
 			<div class="row">
 				<div class="page-header text-center"><h1>What People Are Saying About ASI</h1></div>	
 				<div class="col-md-6">
@@ -243,7 +258,26 @@
 
 
 
+		<section class="blurb-section js--blurb-section container-fluid">
+			<div class="row">
+			<div class="page-header text-center">
+			<h1>Facilitate Post-Hospital Care</h1></div>
+			<div class="col-md-6">
+				<ul>
+					<li>Reduce unnecessary hospital readmissions</li>
+					<li>Enable the efficient and streamlined monitoring of post-acute care</li>
+					<li>Collect clinically meaningful data to enhance and adjust care</li>
+				<ul>	
+			</div>
 
+			<div class="col-md-6">
+				<ul>
+					<li>Support client/patient autonomy through education and communication</li>
+					<li>Drive value based care by increasing and enhancing ongoing interactions between patients and clinicians
+					<li>Promotes healing and prevents infections</li>	
+				</ul>
+			</div>
+		</section>
 		
 		
 		
@@ -257,7 +291,7 @@
 
 
 
-		<section class="form-section js--form-section container" id="form-section">
+		<section class="form-section js--form-section container-fluid" id="form-section">
 			<div class="row">
 				<div class="page-header text-center">
 					<h1>Schedule A Free Consultation</h1>
@@ -302,7 +336,7 @@
 
 
 
-		<footer>
+		<footer class="container-fluid">
 		<div class="row">
 			<div class="col-md-6">
 				<ul class="footer-nav">
