--- a/index.html
+++ b/index.html
@@ -53,57 +53,45 @@
 				<div class="page-header text-center"><h1>How It Works</h1></div>
 				<div class="col-md-4">
 					<h4><img src="styles/images/nurse_icon.png" class="icon" width="15%" height="auto">HEADING TITLE</h4>
-					<ul class="bullet-copy">
-						<li>Lorem ipsum dolor sit amet, consectetur adipiscing.</li>
-						<li>Nam sollicitudin velit quam, vel gravida enim blandit.</li> 
-						<li>Mauris ac odio mollis, tincidunt tellus eget, gravida.</li> 
-						<li>Fusce iaculis urna at ligula pellentesque viverra.</li>
-					</ul>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing.</p>
+						<p>Nam sollicitudin velit quam, vel gravida enim blandit.</p> 
+						<p>Mauris ac odio mollis, tincidunt tellus eget, gravida.</p> 
+						<p>Fusce iaculis urna at ligula pellentesque viverra.</p>
 				</div>
 				<div class="col-md-4">
 					<h4><img src="styles/images/doctor.png" class="icon" width="15%" height="auto">HEADING TITLE</h4>
-					<ul>
-						<li>Lorem ipsum dolor sit amet, consectetur adipiscing.</li>
-						<li>Nam sollicitudin velit quam, vel gravida enim blandit.</li> 
-						<li>Mauris ac odio mollis, tincidunt tellus eget, gravida.</li> 
-						<li>Fusce iaculis urna at ligula pellentesque viverra.</li>
-					</ul>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing.</p>
+						<p>Nam sollicitudin velit quam, vel gravida enim blandit.</p> 
+						<p>Mauris ac odio mollis, tincidunt tellus eget, gravida.</p> 
+						<p>Fusce iaculis urna at ligula</p> 
 				</div>
 				<div class="col-md-4">
 					<h4><img src="styles/images/stet.png" class="icon" width="15%" height="auto">HEADING TITLE</h4>
-					<ul>
-						<li>Lorem ipsum dolor sit amet, consectetur adipiscing.</li>
-						<li>Nam sollicitudin velit quam, vel gravida enim blandit.</li> 
-						<li>Mauris ac odio mollis, tincidunt tellus eget, gravida.</li> 
-						<li>Fusce iaculis urna at ligula pellentesque viverra.</li>
-					</ul>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing.</p>
+						<p>Nam sollicitudin velit quam, vel gravida enim blandit.</p> 
+						<p>Mauris ac odio mollis, tincidunt tellus eget, gravida.</p> 
+						<p>Fusce iaculis urna at ligula</p> 
 				</div>
 				<div class="col-md-4">
 					<h4><img src="styles/images/heart_magnifier.png" class="icon"  width="15%" height="auto">HEADING TITLE</h4>
-					<ul>
-						<li>Lorem ipsum dolor sit amet, consectetur adipiscing.</li>
-						<li>Nam sollicitudin velit quam, vel gravida enim blandit.</li> 
-						<li>Mauris ac odio mollis, tincidunt tellus eget, gravida.</li> 
-						<li>Fusce iaculis urna at ligula pellentesque viverra.</li>
-					</ul>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing.</p>
+						<p>Nam sollicitudin velit quam, vel gravida enim blandit.</p> 
+						<p>Mauris ac odio mollis, tincidunt tellus eget, gravida.</p> 
+						<p>Fusce iaculis urna at ligula</p> 
 				</div>
 				<div class="col-md-4">
 					<h4><img src="styles/images/ambulance.png" class="icon" width="15%" height="auto">HEADING TITLE</h4>
-					<ul>
-						<li>Lorem ipsum dolor sit amet, consectetur adipiscing.</li>
-						<li>Nam sollicitudin velit quam, vel gravida enim blandit.</li> 
-						<li>Mauris ac odio mollis, tincidunt tellus eget, gravida.</li> 
-						<li>Fusce iaculis urna at ligula pellentesque viverra.</li>
-					</ul>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing.</p>
+						<p>Nam sollicitudin velit quam, vel gravida enim blandit.</p> 
+						<p>Mauris ac odio mollis, tincidunt tellus eget, gravida.</p> 
+						<p>Fusce iaculis urna at ligula</p> 
 				</div>
 				<div class="col-md-4">
 					<h4><img src="styles/images/stet.png"  width="15%" class="icon" height="auto">HEADING TITLE</h4>
-					<ul>
-						<li>Lorem ipsum dolor sit amet, consectetur adipiscing.</li>
-						<li>Nam sollicitudin velit quam, vel gravida enim blandit.</li> 
-						<li>Mauris ac odio mollis, tincidunt tellus eget, gravida.</li> 
-						<li>Fusce iaculis urna at ligula pellentesque viverra.</li>
-					</ul>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing.</p>
+						<p>Nam sollicitudin velit quam, vel gravida enim blandit.</p> 
+						<p>Mauris ac odio mollis, tincidunt tellus eget, gravida.</p> 
+						<p>Fusce iaculis urna at ligula</p> 
 				</div>
 			</div>
 		</section>
@@ -141,30 +129,24 @@
 				<div class="page-header text-center"><h1>Information Center</h1></div>
 				<div class="col-md-4">
 					<h4>ALL CARE IN ONE PLACE</h4>
-					<ul>
-						<li>Certified Nurses Available for Home Visits</li>
-						<li>Trained Caregivers</li>
-					</ul>
+					<p>Certified Nurses Available for Home Visits</p>
+					<p>Trained Caregivers</p>
 				</div>
 				<div class="col-md-4">
 					<h4>COORDINATED CARE MONITORING</h4>
-					<ul>
-						<li>Prevent Illness</li>
-						<li>Shorten Hospital Stay</li>
-						<li>Stay-in Place</li>
-					</ul>
+						<p>Prevent Illness</p>
+						<p>Shorten Hospital Stay</p>
+						<p>Stay-in Place</p>
 				</div>
 				<div class="col-md-4">
 					<h4>CONCIERGE</h4>
-					<ul>
-						<li>Healthcare Scheduling</li>
-						<li>Home Medical Equipment</li>
-						<li>Home Modification</li>
-						<li>Transportation</li>
-						<li>Heavy Duty Cleaning</li>
-						<li>Home Meals or Delivered</li>
-						<li>Home Chores</li>
-					</ul>
+						<p>Healthcare Scheduling</p>
+						<p>Home Medical Equipment</p>
+						<p>Home Modification</p>
+						<p>Transportation</p>
+						<p>Heavy Duty Cleaning</p>
+						<p>Home Meals or Delivered</p>
+						<p>Home Chores</p>
 				</div>
 				<div class="col-md-12 text-center">
 					<img src="styles/images/gears.png">
