--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 
 
 		
-		<section class="blurb-section js--blurb-section container-fluid">
+		<section class="blurb-section-two js--blurb-section container-fluid">
 			<div class="page-header text-center"><h1>What Makes Us Different?</h1></div>
 			<h4>We treat dual eligible patients. Our services include a transportation system for patients who need a ride to the doctor and home medical equipment. ASI is an all-inclusive agency providing multilingual competent services.</h4>
 		</section>		
@@ -240,7 +240,7 @@
 
 
 
-		<section class="blurb-section js--blurb-section container-fluid">
+		<section class="blurb-section-three js--blurb-section container-fluid">
 			<div class="row">
 			<div class="page-header text-center">
 			<h1>Facilitate Post-Hospital Care</h1></div>
